--- a/samples/meteor-pubsub/src/main/webapp/WEB-INF/web.xml
+++ b/samples/meteor-pubsub/src/main/webapp/WEB-INF/web.xml
@@ -13,6 +13,10 @@
             <param-name>org.atmosphere.cpr.packages</param-name>
             <param-value>org.atmosphere.samples</param-value>
         </init-param>
+       	<init-param>
+            <param-name>org.atmosphere.cpr.broadcasterClass</param-name>
+            <param-value>org.atmosphere.samples.pubsub.rabbitmq.RabbitMQBroadcaster</param-value>
+        </init-param>
         <load-on-startup>0</load-on-startup>
         <async-supported>true</async-supported>
     </servlet>
